--- a/src/index.html
+++ b/src/index.html
@@ -17,8 +17,40 @@
 				<ul class="navbar-nav mr-auto">
 					<li class="nav-item active"><a class="nav-link" href="#">О компании</a></li>
 					<li class="nav-item"><a class="nav-link" href="#">Каталог</a></li>
+					<li class="nav-item"><a class="nav-link" href="#">Партнерам</a></li>
+					<li class="nav-item"><a class="nav-link" href="#">Контакты</a></li>
 				</ul>
+				<form class="form-inline my-2 my-lg-0">
+					<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+					<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+				</form>
 			</div>
 		</nav>
+		<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="7500">
+			<ol class="carousel-indicators">
+				<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+				<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+				<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+			</ol>
+			<div class="carousel-inner">
+				<div class="carousel-item active">
+					<div class="d-block w-100"><div class="img" style="height: calc(100vh - 56px); background-color: #aaa"></div></div>
+				</div>
+				<div class="carousel-item">
+					<div class="d-block w-100"><div class="img" style="height: calc(100vh - 56px); background-color: #bbb"></div></div>
+				</div>
+				<div class="carousel-item">
+					<div class="d-block w-100"><div class="img" style="height: calc(100vh - 56px); background-color: #ccc"></div></div>
+				</div>
+			</div>
+			<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				<span class="sr-only">Назад</span>
+			</a>
+			<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+				<span class="sr-only">Далее</span>
+			</a>
+		</div>
 	</body>
 </html>
