first page is done

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
 		<title>Брестский стандарт</title>
 		<script src="/modules/jquery.min.js" charset="utf-8"></script>
 		<script src="/modules/bootstrap.min.js" charset="utf-8"></script>
+		<script src="/script/custom_slider.js" charset="utf-8"></script>
 		<link href="/modules/bootstrap.min.css" rel="stylesheet">
 	</head>
 	<body>
@@ -92,5 +93,118 @@
 				</a>
 			</div>
 		</div>
+		<div class="block bg-gray">
+			<img class="block-bg" src="/assets/spice.jpg">
+			<div class="container py-5">
+				<div class="row">
+					<div class="col text-center">
+						<div class="h1">Каталог</div>
+						<p>Широкий ассортимент колбасных изделий и мясных деликатесов</p>
+					</div>
+					<div class="w-100"></div>
+					<div class="custom-slider">
+						<div class="custom-slider-inner">
+							<div class="custom-slider-item"><a href="#"><img src="/assets/catalog/sausage1.jpg" alt=""></a></div>
+							<div class="custom-slider-item"><a href="#"><img src="/assets/catalog/sausage2.jpg" alt=""></a></div>
+							<div class="custom-slider-item"><a href="#"><img src="/assets/catalog/b-sausage.jpg" alt=""></a></div>
+							<div class="custom-slider-item"><a href="#"><img src="/assets/catalog/bs-sausage.jpg" alt=""></a></div>
+							<div class="custom-slider-item"><a href="#"><img src="/assets/catalog/frozen.jpg" alt=""></a></div>
+						</div>
+						<a class="custom-slider-control-prev" href="#">
+							<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+						</a>
+						<a class="custom-slider-control-next" href="#">
+							<span class="carousel-control-next-icon" aria-hidden="true"></span>
+						</a>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="block bg-light">
+			<div class="container py-5">
+				<div class="row">
+					<div class="col-12 col-md-4 text-center text-md-left">
+						<div class="h2 pb-3">География продаж</div>
+						<p class="h3 pb-3">Приглашаем к сотрудничеству дилеров и партнёров!</p>
+						<p class="text-left">Наша продукция представлена в городах Беларуси, России, Казахстана и Узбекистана. Широкий ассортимент продукции, выгодные цены от белорусского производителя.</p>
+						<a class="btn btn-primary btn-lg text-white my-3" role="button">Как стать партнером</a>
+					</div>
+					<div class="col-12 col-md-8 text-right">
+						<img src="/assets/geography_map.png" alt="География продаж">
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="block">
+			<div class="container py-5">
+				<div class="row">
+					<div class="col-12 col-md-5">
+						<div class="h2 pb-3 text-center text-md-left">О компнии</div>
+						<p>Компания «Старфуд» — это современное, высокотехнологичное предприятие, специализирующееся на производстве колбасных изделий и мясных деликатесов. Используя только качественное сырье, мы создаем продукт, который по достоинству оценит каждый, даже самый взыскательный потребитель.</p>
+						<p>Мы разрабатываем новые рецептуры и сохраняем наиболее полюбившиеся наименования в их неизменном вкусе и качестве. Ассортимент наших вареных, полукопченых и варено-копченых колбас зарекомендовал себя на рынке и узнаваем покупателями не только в Беларуси и различных регионах России, но и в странах Ближнего Зарубежья.</p>
+					</div>
+					<div class="col-12 col-md-7 order-md-first text-center text-md-right">
+						<img src="/assets/meat.png" alt="О компании ">
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="bg-gray-light py-4">
+			<div class="container">
+				<div class="row">
+					<div class="col-12 col-md-4">
+						<p class="h4"><span class="text-primary">01.</span> Качественное сырье</p>
+						<p>Мы ориентированы на удовлетворение потребностей клиентов в качественной мясной продукции по разумным ценам</p>
+					</div>
+					<div class="col-12 col-md-4">
+						<p class="h4"><span class="text-primary">02.</span> Соответствие государственным стандартам</p>
+						<p>Вся выпускаемая продукция проходит необходимые биохимические и санитарно-химические испытания</p>
+					</div>
+					<div class="col-12 col-md-4">
+						<p class="h4"><span class="text-primary">03.</span> Благоприятные условия для ведения бизнеса</p>
+						<p>Предлагаем партнерские условия сотрудничества</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<footer class="bg-gray-dark">
+			<div class="container text-light py-4">
+				<div class="row justify-content-center">
+					<div class="col-auto col-md-3 col-lg-4">
+						<nav class="d-flex flex-column">
+							<p><a class="text-light"href="#">О компании</a></p>
+							<p><a class="text-light"href="#">Партнерам</a></p>
+							<p><a class="text-light"href="#">Контакты</a></p>
+							<p><a class="text-light"href="#">Карта сайта</a></p>
+						</nav>
+					</div>
+					<div class="col-auto col-md-3 col-lg-4">
+						<nav class="d-flex flex-column">
+							<p><u><a class="text-light"href="#">Каталог</a></u></p>
+							<p><u><a class="text-gray"href="#">Сасиски</a></u></p>
+							<p><u><a class="text-gray"href="#">Сардельки</a></u></p>
+							<p><u><a class="text-gray"href="#">Вареные колбасы</a></u></p>
+							<p><u><a class="text-gray"href="#">Варено-копченые колбасы</a></u></p>
+							<p><u><a class="text-gray"href="#">Замороженная продукция</a></u></p>
+						</nav>
+					</div>
+					<div class="col-12 col-md-6 col-lg-4 text-center">
+						<p class="h3">+375 (33) 903-77-77</p>
+						<br>
+						<button class="btn btn-primary btn-lg" type="button">Оставить запрос</button>
+					</div>
+				</div>
+			</div>
+			<div class="bg-dark text-gray-light py-3">
+				<div class="container d-flex justify-content-between">
+					<div>
+						© 2018 СООО «Старфуд»
+					</div>
+					<div>
+						<span class="text-gray">Разработал:</span> Сергей Mурзин
+					</div>
+				</div>
+			</div>
+		</footer>
 	</body>
 </html>
